--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+csv = "1.3.0"
+rust_decimal = "1.35.0"
+rust_decimal_macros = "1.34.2"
+serde = {version = "1.0.203", features = ["derive"] }
