--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 csv = "1.3.0"
+env_logger = "0.11.3"
+log = "0.4.22"
 rust_decimal = "1.35.0"
 rust_decimal_macros = "1.34.2"
 serde = {version = "1.0.203", features = ["derive"] }
