--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ env_logger = "0.11.3"
 log = "0.4.22"
 rust_decimal = "1.35.0"
 rust_decimal_macros = "1.34.2"
-serde = {version = "1.0.203", features = ["derive"] }
+serde = { version = "1.0.203", features = ["derive"] }
+tokio = { version = "1.38.0", features = ["full"] }
